--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,8 @@
-# Ensure specific files are detected as certain languages
+
 *.py linguist-detectable=true
 *.dart linguist-detectable=true
+*.csharp linguist-detectable=true  
+*.cpp linguist-detectable=true  
+
+
 
