--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,7 @@
 
 *.py linguist-detectable=true
-*.dart linguist-detectable=true
-*.csharp linguist-detectable=true  
-*.c++ linguist-detectable=true  
+*.dart linguist-detectable=true 
+*.cpp linguist-detectable=false  
 
 
 
