--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
- *.cpp linguist-detectable=false   
+*.cpp linguist-detectable=false   
 *.cmake linguist-detectable=false
 *.cmake.in linguist-detectable=false
+*.swift linguist-detectable=false
