--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,16 @@
+*.csharp linguist-detectable=false
+*.java linguist-detectable=false
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
+*.cpp linguist-detectable=false
+*.hpp linguist-detectable=false
+*.cxx linguist-detectable=false
+*.hxx linguist-detectable=false
+*.cc linguist-detectable=false
+*.c linguist-detectable=false
+*.h linguist-detectable=false
+CMakeLists.txt linguist-detectable=false
+*.cmake linguist-detectable=false
 *.dart linguist-detectable=true
 *.py linguist-detectable=true
-*.cpp linguist-detectable=false 
-*.cmake linguist-detectable=falsث
-*.cmake.in linguist-detectable=false
-*.swift linguist-detectable=false
-*.html linguist-detectable=false  
